# Socratic-Zero

./: .env.example  1D.md  README.md  pyproject.toml  requirements.txt
collectors/: __init__.py  data_normalizer.py  trajectory_collector.py
core/: __init__.py  state_manager.py
datasets/: __init__.py  data_saver.py  dpo_data_converter.py
managers/: __init__.py  question_manager.py  round_controller.py
processors/: __init__.py  question_enhancer.py  reward_calculator.py  solver_data_processor.py
scripts/: auto_trainer.py  evaluate_mean_at_k.py  run_training.py  semi_auto_trainer.py
src/evaluation/: __init__.py  evaluator.py  metrics.py
tools/utils/: status_checker.py
trainers/: __init__.py  gpu_manager.py  trl_trainer.py
